2009-06-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.h, src/document.c, src/document.h, src/ui_utils.c:
   Make GeanyDocument::file_type always be non-NULL, even for a new
   document with no filetype set.
 * src/editor.c:
   Only autocomplete scope for scopes matching the current filetype's
   language.
 * data/filetypes.java, data/filetypes.cpp, data/filetypes.vala,
   data/filetypes.haxe, data/filetypes.common, data/filetypes.glsl,
   data/filetypes.actionscript, data/filetypes.cs,
   data/filetypes.ferite, data/filetypes.c, data/filetypes.d,
   data/filetypes.javascript, HACKING:
   Make C++, D lexer filetypes use named styles (apart from uuid,
   verbatim, regex styles).


2009-06-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c:
   Don't explicitly change the current directory of the Save As dialog
   so that it uses the last used directory.


2009-06-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/encodings.c, src/encodings.h, src/plugindata.h:
   Add Japanese encoding "CP932" (patch by Ryūsei Yamaguchi, thanks).
 * src/editor.c:
   Remove dead code.
   When completing from the macro list, put the cursor after
   the inserted text.


2009-06-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/pascal.c:
   Fix type definitions being parsed as functions.
 * src/editor.c:
   Don't autocomplete in unterminated strings as well.
 * src/templates.c, src/utils.h, src/dialogs.c, src/plugindata.h,
   src/filetypes.c, src/ui_utils.c, plugins/saveactions.c:
   Remove data_ptr argument to foreach_[s]list() macros, as using
   node->data is enough sometimes; this makes the macro a bit more
   efficient too.
   Add foreach_[s]list() macros to the plugin API docs.


2009-06-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/LexPascal.cxx:
   Backport fix from Scintilla CVS:
   Pascal lexer hanging on file that starts with 'interface' after